@@ -157,3 +157,15 @@
 		
 		return $result;
 	}
+	
+	function html_email_handler_make_html_body($subject = "", $body = ""){
+		// generate HTML mail body
+		$result = elgg_view("html_email_handler/notification/body", array("title" => $subject, "message" => parse_urls($body)));
+		if(defined("XML_DOCUMENT_NODE")){
+			if($transform = html_email_handler_css_inliner($result)){
+				$result = $transform;
+			}
+		}
+		
+		return $result;
+	}
